--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Portfolio</title>
+    <title>Wawa Williams - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -534,7 +534,7 @@
         <div class="container header-container">
             <a href="#" class="logo" style="display: flex; align-items: center; gap: 10px;">
                 <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Logo" style="height: 36px; width: 36px; border-radius: 50%; object-fit: cover; display: inline-block;">
-                John Doe
+                Wawa Williams
             </a>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -562,7 +562,7 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Hi, I'm John Doe</h1>
+                <h1 class="hero-title">Hi, I'm Wawa Williams</h1>
                 <p class="hero-subtitle">I design useful interfaces and build thoughtful web experiences that help businesses grow.</p>
                 <a href="#portfolio" class="btn">View My Work</a>
                 <div class="hero-highlights">
@@ -584,7 +584,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div>
-                    <p>I'm a computer science graduate and designer with a passion for creating beautiful, functional digital experiences. I specialize in front-end development with a strong eye for visual design, typography, and user experience.</p>
+                    <p>I'm a graphics designer graduate and designer with a passion for creating beautiful, functional digital experiences. I specialize in front-end development with a strong eye for visual design, typography, and user experience.</p>
                     <p>My work blends code and craft — focusing on accessibility and responsive layouts that work seamlessly across all devices.</p>
                     <h3>Skills</h3>
                     <ul class="skills-list">
@@ -693,14 +693,14 @@
             <div class="footer-column">
                 <h3 class="text-white">Contact</h3>
                 <ul>
-                    <li><a href="mailto:johndoe@example.com">johndoe@example.com</a></li>
+                    <li><a href="mailto:wawawilliams@gmail.com">wawawilliams@gmail.com</a></li>
                     <li><a href="tel:+1234567890">(123) 456-7890</a></li>
                     <li><a href="#">Remote Worldwide</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3 class="text-white">Follow Me</h3>
-                <div class="social-links text-white">
+                <div class="text-white social-links">
                     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in" style="color: #fff;"></i></a>
                     <a href="#" aria-label="GitHub"><i class="fab fa-github" style="color: #fff;"></i></a>
                     <a href="#" aria-label="Dribbble"><i class="fab fa-dribbble" style="color: #fff;"></i></a>
@@ -708,8 +708,8 @@
                 </div>
             </div>
         </div>
-        <div class="container text-center mt-40">
-            <p>© 2023 John Doe. All rights reserved. Designed & Developed with Passion.</p>
+        <div class="container mt-40 text-center">
+            <p>© 2025 Wawa Williams. All rights reserved. Designed & Developed with Passion.</p>
         </div>
     </footer>
 
@@ -721,7 +721,7 @@
             <p class="mt-20">A responsive event management application built with Next.js and Prisma. This application allows users to create, manage, and RSVP to events with an intuitive interface.</p>
             <p><strong>Features:</strong> Event creation, RSVP system, search functionality, admin dashboard, responsive design</p>
             <p><strong>Technologies:</strong> Next.js, Prisma, PostgreSQL, Tailwind CSS</p>
-            <a href="#" class="btn mt-20">View Live Project</a>
+            <a href="#" class="mt-20 btn">View Live Project</a>
         </div>
     </div>
     <div id="modal-2" class="modal">
@@ -732,7 +732,7 @@
             <p class="mt-20">Complete brand identity and marketing website for a boutique business. The project included logo design, color system, typography, and responsive landing pages.</p>
             <p><strong>Services:</strong> Logo design, brand guidelines, responsive website, marketing materials</p>
             <p><strong>Technologies:</strong> Adobe Illustrator, HTML, CSS, JavaScript</p>
-            <a href="#" class="btn mt-20">View Live Project</a>
+            <a href="#" class="mt-20 btn">View Live Project</a>
         </div>
     </div>
     <div id="modal-3" class="modal">
@@ -743,7 +743,7 @@
             <p class="mt-20">A Laravel-based dashboard for generating and managing QR codes for events and check-ins. The system includes user roles, export functionality, and analytics.</p>
             <p><strong>Features:</strong> QR code generation, user management, export functionality, analytics dashboard</p>
             <p><strong>Technologies:</strong> Laravel, MySQL, JavaScript, Bootstrap</p>
-            <a href="#" class="btn mt-20">View Live Project</a>
+            <a href="#" class="mt-20 btn">View Live Project</a>
         </div>
     </div>
 
