--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <div class="contact-info">
                     <h3>Contact Information</h3>
                     <div class="contact-details">
-                        <p><i class="fas fa-envelope"></i> johndoe@example.com</p>
+                        <p><i class="fas fa-envelope"></i> wawawilliams@gmail.com</p>
                         <p><i class="fas fa-phone"></i> (123) 456-7890</p>
                         <p><i class="fas fa-map-marker-alt"></i> Available for remote work worldwide</p>
                     </div>
